# earthly-zynqmp-example

./: .gitattributes  .gitignore  Earthfile  LICENSE  README.md  boot.bif  boot.cmd  boot.tcl  design_1_wrapper.xsa  generate.tcl  system-top-append.dts  u-boot.config  u-boot.defconfig
.github/actions/install-earthbuild/: action.yml
.github/actions/install-earthly/: action.yml
.github/workflows/: build.yml
apps/a53/: CMakeLists.txt  main.cc
apps/r5_0/: CMakeLists.txt  lscript.ld  main.cc
apps/r5_0/cmake/Modules/: FindLibXil.cmake
apps/toolchain/: aarch64-linux-gnu.cmake  armr5-none-eabi.cmake
linux/: .config  defconfig
linux/rootfs/boot/extlinux/: extlinux.conf
linux/rootfs/etc/: hostname
linux/rootfs/etc/systemd/network/: 20-usb.network
linux/rootfs/etc/systemd/system/: ipi-led.service  maximize-root-partition.service  setup-usb-ether.service
linux/rootfs/etc/systemd/system/multi-user.target.wants/: ipi-led.service  maximize-root-partition.service  setup-usb-ether.service
